# moszir_public

./: .gitignore  CMakeLists.txt  LICENSE  README.md
algorithms/dynamic_programming/: max_size_square_1_submatrix.py
cmake/: find_google_benchmark.cmake  find_googletest.cmake  find_python.cmake
cpp/: CMakeLists.txt  conan.cmake
cpp/leetcode/: CMakeLists.txt
cpp/leetcode/problem/: 1675_minimize_deviation_in_array.cpp  402_remove_k_digits.cpp
cpp/moszir_lib/: moszir_lib.hpp
cpp/moszir_lib/moszir_lib/: string_vector.hpp  string_view_vector.hpp
cpp/moszir_lib_benchmarks/: CMakeLists.txt  string_vector_benchmark.cpp  string_view_vector_benchmark.cpp
cpp/moszir_lib_tests/: CMakeLists.txt  string_vector_test.cpp  string_view_vector_test.cpp
cpp/stl/: CMakeLists.txt  readme.md
cpp/stl/algorithm/: CMakeLists.txt  ranges_transform.cpp  transform.cpp  transform_benchmarks.cpp
java/data_structures/doubly_linked_list/: DoublyLinkedList.java  DoublyLinkedListIterator.java  DoublyLinkedListIteratorTest.java  DoublyLinkedListNode.java  DoublyLinkedListNodeTest.java  DoublyLinkedListTest.java  pom.xml
java/data_structures/doubly_linked_list/src/main/java/com/data_structures/doubly_linked_list/: DoublyLinkedList.java  DoublyLinkedListIterator.java  DoublyLinkedListNode.java  Main.java
java/data_structures/doubly_linked_list/src/test/java/com/data_structures/doubly_linked_list/: DoublyLinkedListIteratorTest.java  DoublyLinkedListNodeTest.java  DoublyLinkedListTest.java
java/hackerrank/java_practice/java_currency_formatter/: JavaCurrencyFormatter.java  JavaCurrencyFormatterTest.java
java/hackerrank/java_practice/java_string_introduction/: JavaStringIntroduction.java  JavaStringIntroductionTest.java  Solution.java  SolutionTest.java
